tests/fail/fail_11.mason
module x;

proc foo(f: );